TERTIARY AND QUATERNARY ADDED, WHITE REMOVED.

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MGEP bootstrap</title>
-  <link rel="stylesheet" href="scss/mgep_bs.css">
+  <title>MU bootstrap</title>
+  <link rel="stylesheet" href="scss/mu_bs.css">
   <link rel="shortcut icon" href="https://www.mondragon.edu/MU-0.0.1-SNAPSHOT/images/favicon.ico" type="image/x-icon">
 </head>
 
@@ -54,8 +54,11 @@
     <div class="alert alert-secondary" role="alert">
       A simple secondary alert—check it out!
     </div>
-    <div class="alert alert-success" role="alert">
-      A simple success alert—check it out!
+    <div class="alert alert-tertiary" role="alert">
+      A simple tertiary alert—check it out! Hau ez dabil :'(
+    </div>
+    <div class="alert alert-quaternary" role="alert">
+      A simple quaternary alert—check it out! Hau ez dabil :'(
     </div>
     <div class="alert alert-danger" role="alert">
       A simple danger alert—check it out!
@@ -84,15 +87,20 @@
     <div class="alert alert-pro" role="alert">
       A simple PRO alert—check it out! Hau ez dabil :'(
     </div>
+    <div class="alert alert-cta" role="alert">
+      A simple Call to action alert—check it out! Hau ez dabil :'(
+    </div>
   </section>
 
   <section class="container mt-4 pb-3">
     <h2 class="py-3">
       Buttons
     </h2>
-    <div>
+    <div class="d-flex flex-wrap justify-content-center gap-4">
       <button type="button" class="btn btn-primary"><span class="mdi mdi-numeric-1-box"></span> Primary</button>
       <button type="button" class="btn btn-secondary"><span class="mdi mdi-numeric-2-box"></span> Secondary</button>
+      <button type="button" class="btn btn-tertiary"><span class="mdi mdi-numeric-3-box"></span> Tertiary</button>
+      <button type="button" class="btn btn-quaternary"><span class="mdi mdi-numeric-4-box"></span> Quaternary</button>
       <button type="button" class="btn btn-success"><span class="mdi mdi-check-circle"></span> Success</button>
       <button type="button" class="btn btn-danger"><span class="mdi mdi-close-octagon"></span> Danger</button>
       <button type="button" class="btn btn-warning"><span class="mdi mdi-alert"></span> Warning</button>
@@ -104,13 +112,14 @@
       <button type="button" class="btn btn-huezi"><span class="mdi mdi-alpha-h-box"></span> HUEZI</button>
       <button type="button" class="btn btn-eteo"><span class="mdi mdi-alpha-e-box"></span> ETEO</button>
       <button type="button" class="btn btn-pro"><span class="mdi mdi-professional-hexagon"></span> PRO</button>
-      <button type="button" class="btn btn-white"><span class="mdi mdi-alpha-f-box"></span> White</button>
+      <button type="button" class="btn btn-cta"><span class="mdi mdi-gesture-tap"></span> Call to action</button>
     </div>
     <hr>
-    <div>
+    <div class="d-flex flex-wrap justify-content-center gap-4">
       <button type="button" class="btn btn-outline-primary"><span class="mdi mdi-numeric-1-box"></span> Primary</button>
-      <button type="button" class="btn btn-outline-secondary"><span class="mdi mdi-numeric-2-box"></span>
-        Secondary</button>
+      <button type="button" class="btn btn-outline-secondary"><span class="mdi mdi-numeric-2-box"></span> Secondary</button>
+      <button type="button" class="btn btn-outline-tertiary"><span class="mdi mdi-numeric-3-box"></span> Tertiary</button>
+      <button type="button" class="btn btn-outline-quaternary"><span class="mdi mdi-numeric-4-box"></span> Quaternary</button>
       <button type="button" class="btn btn-outline-success"><span class="mdi mdi-check-circle"></span> Success</button>
       <button type="button" class="btn btn-outline-danger"><span class="mdi mdi-close-octagon"></span> Danger</button>
       <button type="button" class="btn btn-outline-warning"><span class="mdi mdi-alert"></span> Warning</button>
@@ -122,7 +131,17 @@
       <button type="button" class="btn btn-outline-huezi"><span class="mdi mdi-alpha-h-box"></span> HUEZI</button>
       <button type="button" class="btn btn-outline-eteo"><span class="mdi mdi-alpha-e-box"></span> ETEO</button>
       <button type="button" class="btn btn-outline-pro"><span class="mdi mdi-professional-hexagon"></span> PRO</button>
-      <button type="button" class="btn btn-outline-white"><span class="mdi mdi-alpha-f-box"></span> White</button>
+      <button type="button" class="btn btn-outline-cta"><span class="mdi mdi-gesture-tap"></span> Call to action</button>
+      </div>
+      <hr>
+      <div class="d-flex flex-wrap justify-content-center gap-4">
+        <button type="button" class="btn biribil btn-primary">Normal</button>
+        <button type="button" class="btn biribil btn-primary">100 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore voluptates reiciendis assumenda iste pariatur quo aperiam, repudiandae est, consequuntur vero ipsam officiis neque quis dicta aliquid quia, iure perferendis! Repellat velit iste maxime dolorum labore eum voluptate debitis obcaecati rem. Aperiam dignissimos aspernatur veritatis. Modi totam recusandae quisquam necessitatibus dignissimos voluptatum repellat tempore ad amet. Facere sunt dolores vel explicabo consectetur consequuntur quae nostrum! Dolores eius recusandae sapiente! Quis, rerum vitae. Suscipit laborum, voluptate quas deleniti omnis similique eos expedita explicabo corrupti. Iste, dolor ut eligendi vitae dolorem modi earum explicabo consectetur qui, ad voluptatem veritatis suscipit facere laborum inventore!</button>
+        <button type="button" class="btn biribil btn-primary">180 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Temporibus sit tenetur blanditiis facere assumenda voluptates error, eaque accusantium, autem accusamus, delectus odio alias quibusdam. Nam vitae deleniti exercitationem. Porro nemo obcaecati excepturi possimus suscipit blanditiis iusto necessitatibus facilis esse architecto est doloremque itaque corporis nulla iure reiciendis neque, voluptatibus optio corrupti quisquam magnam asperiores culpa consectetur. Quibusdam, vero ad odit natus praesentium nostrum quia adipisci quasi optio soluta expedita ullam tempore nam unde et, aut eligendi reiciendis saepe vel? Sapiente quaerat labore, beatae ex sed blanditiis dolor quibusdam placeat repellat voluptates, similique laudantium nobis iure repudiandae aut ea. Dolor et suscipit sed, consectetur placeat voluptatum iusto nostrum quam! Facilis dolores nesciunt molestias atque exercitationem maiores excepturi suscipit laudantium cumque hic minus numquam asperiores maxime, fugit, eos, neque sequi voluptates! Cupiditate molestiae ratione, adipisci veritatis culpa similique tempora sed fugiat error molestias, modi quo eum id, et suscipit atque neque quibusdam sapiente? Corrupti mollitia ducimus debitis impedit quo, dolorem itaque commodi minus maxime dolores reprehenderit nam laboriosam vero velit, blanditiis placeat repellendus expedita officia aliquam quia, ad ut accusantium pariatur recusandae.</button>
+        <button type="button" class="btn biribil btn-primary">320Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis aliquam officia est delectus culpa perferendis a quos! Maxime atque ratione eos quis vitae obcaecati accusantium est veritatis possimus delectus ipsum, corporis sed ex doloribus consectetur consequatur mollitia voluptates dolore sequi corrupti ducimus officiis sunt ab tenetur! Consectetur quae id nihil asperiores modi omnis quisquam harum! Veritatis quibusdam illo saepe vel sed! Provident corporis commodi quasi reprehenderit numquam nemo dolorem labore obcaecati voluptates eaque, qui fugit ut recusandae unde veritatis alias quia accusamus. Consequuntur at, aliquam iusto qui, nulla totam inventore, consectetur quisquam earum sequi accusamus distinctio quam aliquid expedita. Nostrum assumenda ea blanditiis porro labore possimus nam alias eum neque suscipit cupiditate nulla reiciendis ipsam voluptatum, perferendis libero id? Animi deleniti quidem nulla quibusdam iure nam laudantium aspernatur? Expedita ipsam voluptates officiis, possimus dolores repellat illum, mollitia asperiores reprehenderit veritatis temporibus! Labore alias nostrum soluta necessitatibus, animi sed quis veritatis sunt veniam quia ratione eius molestias a architecto explicabo quibusdam rem odit nemo error. Ipsam obcaecati dolor natus amet itaque tempore adipisci ab quisquam hic libero veniam ratione ut quasi saepe aut nisi, eaque eos cum vitae? Incidunt laboriosam autem, aperiam distinctio at dicta provident! Molestiae dolore amet laborum, nemo exercitationem ad repellendus numquam iusto maxime tempore incidunt ipsum distinctio quasi molestias ducimus deleniti voluptatibus aspernatur, maiores quibusdam omnis magni culpa? Laborum, eligendi corrupti quisquam laboriosam necessitatibus fuga maxime error dicta temporibus nihil sequi hic, iure quaerat, quos expedita suscipit provident cumque similique ipsum. Expedita obcaecati hic praesentium ullam cum delectus aliquam, dolorem ex iste non, recusandae quod eaque pariatur perferendis placeat repellendus. Atque reprehenderit facere natus dolorem ducimus enim eveniet velit quisquam animi nesciunt hic labore architecto ab impedit similique commodi aliquam vel, sunt dignissimos illum! Dolorem dignissimos rerum debitis placeat quaerat esse fugit explicabo incidunt, nisi harum exercitationem atque nemo possimus quidem recusandae aliquam quibusdam? Animi maiores explicabo praesentium similique culpa sapiente dolorem enim. Voluptatem soluta facere ducimus.</button>
+        <button type="button" class="btn biribil biribil-left btn-primary">Left</button>
+        <button type="button" class="btn biribil biribil-right btn-primary">Right</button>
+      </div>
     </div>
   </section>
   <section class="container mt-4 pb-3 bg-secondary">
@@ -170,16 +189,16 @@
     <div class="row">
       <div class="col-md-4">
         <div class="card text-center">
-          <div class="card-header bg-dark text-white">
-            Featured
+          <div class="card-header bg-secondary text-light">
+            Secondary
           </div>
           <div class="card-body">
             <h5 class="card-title">Special title treatment</h5>
             <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
             <a href="#" class="btn btn-primary">Go somewhere</a>
           </div>
-          <div class="card-footer text-dark bg-light">
-            2 days ago
+          <div class="card-footer bg-tertiary">
+            Tertiary
           </div>
         </div>
       </div>
@@ -187,17 +206,18 @@
       <div class="col-md-4">
         <div class="card text-center">
           <div class="card-header bg-mgep text-white">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio architecto similique maiores voluptatum
+            MGEP
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio architecto similique maiores voluptatum
             dignissimos, earum numquam, sit autem cupiditate in laudantium mollitia consequuntur qui impedit vero
-            suscipit recusandae. Illum at officia minima!
+            suscipit recusandae. Illum at officia minima!</p>
           </div>
           <div class="card-body">
             <h5 class="card-title">Special title treatment</h5>
             <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <a href="#" class="btn btn-mgep">Go somewhere</a>
           </div>
-          <div class="card-footer text-white bg-secondary">
-            2 days ago
+          <div class="card-footer bg-dark text-white ">
+            Dark
           </div>
         </div>
       </div>
@@ -205,15 +225,16 @@
       <div class="col-md-4">
         <div class="card text-center">
           <div class="card-header bg-huezi text-white">
-            Featured
+            HUEZI
           </div>
           <div class="card-body">
             <h5 class="card-title">Special title treatment</h5>
             <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <a href="#" class="btn btn-huezi">Go somewhere</a>
           </div>
-          <div class="card-footer text-white bg-secondary">
-            2 days ago
+          <div class="card-footer bg-quaternary">
+            Quaternary
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat est laudantium consequuntur suscipit quas error nulla tempora velit et. Magni eius in sunt velit earum placeat est id sequi minima vero. A.</p>
           </div>
         </div>
       </div>
@@ -222,15 +243,15 @@
       <div class="col-md-4">
         <div class="card text-center">
           <div class="card-header bg-eteo text-white">
-            Featured
+            ETEO
           </div>
           <div class="card-body">
             <h5 class="card-title">Special title treatment</h5>
             <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <a href="#" class="btn btn-eteo">Go somewhere</a>
           </div>
-          <div class="card-footer text-white bg-secondary">
-            2 days ago
+          <div class="card-footer text-white bg-dark">
+            Dark
           </div>
         </div>
       </div>
@@ -238,15 +259,15 @@
       <div class="col-md-4">
         <div class="card text-center">
           <div class="card-header bg-pro text-white">
-            Featured
+            PRO
           </div>
           <div class="card-body">
             <h5 class="card-title">Special title treatment</h5>
             <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <a href="#" class="btn btn-pro">Go somewhere</a>
           </div>
-          <div class="card-footer text-white bg-secondary">
-            2 days ago
+          <div class="card-footer text-white bg-dark">
+            Dark
           </div>
         </div>
       </div>
