--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
     <div class="alert alert-quaternary" role="alert">
       A simple quaternary alert—check it out! Hau ez dabil :'(
     </div>
+    <div class="alert alert-success" role="alert">
+      A simple success alert—check it out!
+    </div>
     <div class="alert alert-danger" role="alert">
       A simple danger alert—check it out!
     </div>
@@ -189,16 +192,16 @@
     <div class="row">
       <div class="col-md-4">
         <div class="card text-center">
-          <div class="card-header bg-secondary text-light">
-            Secondary
+          <div class="card-header">
+            Default (Secondary)
           </div>
           <div class="card-body">
             <h5 class="card-title">Special title treatment</h5>
             <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
             <a href="#" class="btn btn-primary">Go somewhere</a>
           </div>
-          <div class="card-footer bg-tertiary">
-            Tertiary
+          <div class="card-footer">
+            Default (Tertiary)
           </div>
         </div>
       </div>
