GITLAB CI ADDED FOR GITLAB PAGES

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MU bootstrap</title>
-  <link rel="stylesheet" href="scss/mu_bs.css">
+  <link rel="stylesheet" href="./css/mu_bs.css">
   <link rel="shortcut icon" href="https://www.mondragon.edu/MU-0.0.1-SNAPSHOT/images/favicon.ico" type="image/x-icon">
 </head>
 
