ALERTS IN ALL THEMES, BOOTSTRAP VERSION UPDATED

--- a/public/index.html
+++ b/public/index.html
@@ -55,10 +55,10 @@
       A simple secondary alert—check it out!
     </div>
     <div class="alert alert-tertiary" role="alert">
-      A simple tertiary alert—check it out! Hau ez dabil :'(
+      A simple tertiary alert—check it out! (berezia sass-en)
     </div>
     <div class="alert alert-quaternary" role="alert">
-      A simple quaternary alert—check it out! Hau ez dabil :'(
+      A simple quaternary alert—check it out! (berezia sass-en)
     </div>
     <div class="alert alert-success" role="alert">
       A simple success alert—check it out!
@@ -79,19 +79,19 @@
       A simple dark alert—check it out!
     </div>
     <div class="alert alert-mgep" role="alert">
-      A simple MGEP alert—check it out! Hau ez dabil :'(
+      A simple MGEP alert—check it out! (berezia sass-en)
     </div>
     <div class="alert alert-huezi" role="alert">
-      A simple HUEZI alert—check it out! Hau ez dabil :'(
+      A simple HUEZI alert—check it out! (berezia sass-en)
     </div>
     <div class="alert alert-eteo" role="alert">
-      A simple ETEO alert—check it out! Hau ez dabil :'(
+      A simple ETEO alert—check it out! (berezia sass-en)
     </div>
     <div class="alert alert-pro" role="alert">
-      A simple PRO alert—check it out! Hau ez dabil :'(
+      A simple PRO alert—check it out! (berezia sass-en)
     </div>
     <div class="alert alert-cta" role="alert">
-      A simple Call to action alert—check it out! Hau ez dabil :'(
+      A simple Call to action alert—check it out! (berezia sass-en)
     </div>
   </section>
 
@@ -208,7 +208,7 @@
 
       <div class="col-md-4">
         <div class="card text-center">
-          <div class="card-header bg-mgep text-white">
+          <div class="card-header bg-mgep text-dark">
             MGEP
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio architecto similique maiores voluptatum
             dignissimos, earum numquam, sit autem cupiditate in laudantium mollitia consequuntur qui impedit vero
@@ -227,7 +227,7 @@
 
       <div class="col-md-4">
         <div class="card text-center">
-          <div class="card-header bg-huezi text-white">
+          <div class="card-header bg-huezi">
             HUEZI
           </div>
           <div class="card-body">
@@ -245,7 +245,7 @@
 
       <div class="col-md-4">
         <div class="card text-center">
-          <div class="card-header bg-eteo text-white">
+          <div class="card-header bg-eteo text-dark">
             ETEO
           </div>
           <div class="card-body">
@@ -261,7 +261,7 @@
 
       <div class="col-md-4">
         <div class="card text-center">
-          <div class="card-header bg-pro text-white">
+          <div class="card-header bg-pro">
             PRO
           </div>
           <div class="card-body">
