MDI REMOVED FROM SCSS

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   <title>MU bootstrap</title>
   <link rel="stylesheet" href="./css/mu_bs.css">
   <link rel="shortcut icon" href="https://www.mondragon.edu/MU-0.0.1-SNAPSHOT/images/favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@7.2.96/css/materialdesignicons.min.css">
 </head>
 
 <body>
@@ -44,53 +45,68 @@
       </div>
     </div>
   </nav>
-  <section class="container mt-4 bg-primary">
-    <h2 class="py-3">
+  <section class="container mt-4 bg-primary p-4">
+    <h2 class="pb-3">
       Alerts
     </h2>
     <div class="alert alert-primary" role="alert">
+      <span class="mdi mdi-numeric-1-box"></span>
       A simple primary alert—check it out!
     </div>
     <div class="alert alert-secondary" role="alert">
+      <span class="mdi mdi-numeric-2-box"></span>
       A simple secondary alert—check it out!
     </div>
     <div class="alert alert-tertiary" role="alert">
+      <span class="mdi mdi-numeric-3-box"></span>
       A simple tertiary alert—check it out! (berezia sass-en)
     </div>
     <div class="alert alert-quaternary" role="alert">
+      <span class="mdi mdi-numeric-4-box"></span>
       A simple quaternary alert—check it out! (berezia sass-en)
     </div>
     <div class="alert alert-success" role="alert">
+      <span class="mdi mdi-check-circle"></span>
       A simple success alert—check it out!
     </div>
     <div class="alert alert-danger" role="alert">
+      <span class="mdi mdi-close-octagon"></span>
       A simple danger alert—check it out!
     </div>
     <div class="alert alert-warning" role="alert">
+      <span class="mdi mdi-alert"></span>
       A simple warning alert—check it out!
     </div>
     <div class="alert alert-info" role="alert">
+      <span class="mdi mdi-information"></span>
       A simple info alert—check it out!
     </div>
     <div class="alert alert-light" role="alert">
+      <span class="mdi mdi-lightbulb-on"></span>
       A simple light alert—check it out!
     </div>
     <div class="alert alert-dark" role="alert">
+      <span class="mdi mdi-lightbulb"></span>
       A simple dark alert—check it out!
     </div>
     <div class="alert alert-mgep" role="alert">
+      <span class="mdi mdi-alpha-m-box"></span>
       A simple MGEP alert—check it out! (berezia sass-en)
     </div>
     <div class="alert alert-huezi" role="alert">
+      <span class="mdi mdi-alpha-h-box"></span>
       A simple HUEZI alert—check it out! (berezia sass-en)
     </div>
     <div class="alert alert-eteo" role="alert">
+      <span class="mdi mdi-alpha-e-box"></span>
       A simple ETEO alert—check it out! (berezia sass-en)
     </div>
     <div class="alert alert-pro" role="alert">
+      <span class="mdi mdi-professional-hexagon"></span>
       A simple PRO alert—check it out! (berezia sass-en)
     </div>
     <div class="alert alert-cta" role="alert">
+      <span class="mdi mdi-gesture-tap"></span>
       A simple Call to action alert—check it out! (berezia sass-en)
     </div>
   </section>
@@ -137,6 +153,25 @@
       <button type="button" class="btn btn-outline-cta"><span class="mdi mdi-gesture-tap"></span> Call to action</button>
       </div>
       <hr>
+      <div class="d-flex flex-wrap justify-content-center gap-4 bg-dark py-4">
+        <button type="button" class="btn btn-outline-primary"><span class="mdi mdi-numeric-1-box"></span> Primary</button>
+        <button type="button" class="btn btn-outline-secondary"><span class="mdi mdi-numeric-2-box"></span> Secondary</button>
+        <button type="button" class="btn btn-outline-tertiary"><span class="mdi mdi-numeric-3-box"></span> Tertiary</button>
+        <button type="button" class="btn btn-outline-quaternary"><span class="mdi mdi-numeric-4-box"></span> Quaternary</button>
+        <button type="button" class="btn btn-outline-success"><span class="mdi mdi-check-circle"></span> Success</button>
+        <button type="button" class="btn btn-outline-danger"><span class="mdi mdi-close-octagon"></span> Danger</button>
+        <button type="button" class="btn btn-outline-warning"><span class="mdi mdi-alert"></span> Warning</button>
+        <button type="button" class="btn btn-outline-info"><span class="mdi mdi-information"></span> Info</button>
+        <button type="button" class="btn btn-outline-light"><span class="mdi mdi-lightbulb-on"></span> Light</button>
+        <button type="button" class="btn btn-outline-dark"><span class="mdi mdi-lightbulb"></span> Dark</button>
+        <button type="button" class="btn btn-outline-link">Link <span class="mdi mdi-link"></span></button>
+        <button type="button" class="btn btn-outline-mgep"><span class="mdi mdi-alpha-m-box"></span> MGEP</button>
+        <button type="button" class="btn btn-outline-huezi"><span class="mdi mdi-alpha-h-box"></span> HUEZI</button>
+        <button type="button" class="btn btn-outline-eteo"><span class="mdi mdi-alpha-e-box"></span> ETEO</button>
+        <button type="button" class="btn btn-outline-pro"><span class="mdi mdi-professional-hexagon"></span> PRO</button>
+        <button type="button" class="btn btn-outline-cta"><span class="mdi mdi-gesture-tap"></span> Call to action</button>
+        </div>
+        <hr>
       <div class="d-flex flex-wrap justify-content-center gap-4">
         <button type="button" class="btn biribil btn-primary">Normal</button>
         <button type="button" class="btn biribil btn-primary">100 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore voluptates reiciendis assumenda iste pariatur quo aperiam, repudiandae est, consequuntur vero ipsam officiis neque quis dicta aliquid quia, iure perferendis! Repellat velit iste maxime dolorum labore eum voluptate debitis obcaecati rem. Aperiam dignissimos aspernatur veritatis. Modi totam recusandae quisquam necessitatibus dignissimos voluptatum repellat tempore ad amet. Facere sunt dolores vel explicabo consectetur consequuntur quae nostrum! Dolores eius recusandae sapiente! Quis, rerum vitae. Suscipit laborum, voluptate quas deleniti omnis similique eos expedita explicabo corrupti. Iste, dolor ut eligendi vitae dolorem modi earum explicabo consectetur qui, ad voluptatem veritatis suscipit facere laborum inventore!</button>
@@ -276,6 +311,7 @@
       </div>
     </div><!-- row-->
   </section>
+  <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
 </body>
 
 </html>
