--- a/public/index.html
+++ b/public/index.html
@@ -326,6 +326,21 @@
             </div>
           </div>
         </div>
+        <div class="col-md-4">
+          <div class="card text-center" data-bs-theme="light">
+            <div class="card-header bg-quaternary text-dark">
+              Quaternary
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">This card will ALWAYS be LIGHT (ez dabil)</h5>
+              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+            <div class="card-footer bg-dark text-light">
+              Dark
+            </div>
+          </div>
+        </div>
 
         <div class="col-md-4">
           <div class="card text-center">
