BUILD AND DEPLOY ON GITHUB PAGES

--- a/public/index.html
+++ b/public/index.html
@@ -65,6 +65,9 @@
   </nav>
   <main>
     <section class="container p-4">
+      <p>https://cdn.jsdelivr.net/gh/mu-sse/mu-bootstrap@main/public/css/mu_bs.css</p>
+    </section>
+    <section class="container p-4">
       <h2 class="pb-3">
         Alerts
       </h2>
