ADDED MIN VERSIONS OF THE CSS

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MUtstrap</title>
-  <link rel="stylesheet" href="./css/mu_bs.css">
+  <link rel="stylesheet" href="./css/mu_bs.min.css">
   <link rel="shortcut icon" href="https://www.mondragon.edu/MU-0.0.1-SNAPSHOT/images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@7.2.96/css/materialdesignicons.min.css">
 </head>
@@ -65,7 +65,18 @@
   </nav>
   <main>
     <section class="container p-4">
-      <p>https://cdn.jsdelivr.net/gh/mu-sse/mu-bootstrap@main/public/css/mu_bs.css</p>
+      <div class="alert alert-info" role="alert">
+        <span class="mdi mdi-information"></span>
+        <a href="https://cdn.jsdelivr.net/gh/mu-sse/mu-bootstrap@main/public/css/mu_bs.min.css">
+          https://cdn.jsdelivr.net/gh/mu-sse/mu-bootstrap@main/public/css/mu_bs.min.css
+        </a>
+      </div>
+      <div class="alert alert-info" role="alert">
+        <span class="mdi mdi-information"></span>
+        <a href="https://cdn.jsdelivr.net/gh/mu-sse/mu-bootstrap@main/public/css/mu_bs.css">
+          https://cdn.jsdelivr.net/gh/mu-sse/mu-bootstrap@main/public/css/mu_bs.css
+        </a>
+      </div>
     </section>
     <section class="container p-4">
       <h2 class="pb-3">
